--- a/book/book.tex
+++ b/book/book.tex
@@ -5146,7 +5146,7 @@ manera en que se usa.
 
 Para descartar la primera posibilidad, puedes agregar una sentencia {\tt print}
 al comienzo de la función y mostrar los valores de los
-parámetros (y quizás sus tipos).  O puedes escribir código
+parámetros (y quizás sus tipos).  O bien puedes escribir código
 que verifique las precondiciones de manera explícita.
 \index{precondición}
 \index{postcondición}
@@ -6047,7 +6047,7 @@ que restar 1 a {\tt longitud}:
 'a'
 \end{verbatim}
 %
-O puedes usar índices negativos, que cuentan hacia atrás desde
+O bien puedes usar índices negativos, que cuentan hacia atrás desde
 el final de la cadena.  La expresión {\tt fruta[-1]} entrega la última
 letra, {\tt fruta[-2]} entrega la penúltima, y así sucesivamente.
 \index{índice negativo}
@@ -6240,7 +6240,7 @@ la cadena original.
 \index{concatenación}
 
 
-\section{Búsqueda}
+\section{Buscar}
 \label{find}
 
 ¿Qué hace la siguiente función?
@@ -6860,7 +6860,7 @@ si llamas a {\tt readline} de nuevo, obtienes la palabra siguiente:
 %
 La palabra siguiente es ``aah'', que es una palabra perfectamente legítima,
 así que deja de mirarme así.
-O, si es el carácter nueva línea lo que te molesta,
+O bien, si es el carácter nueva línea lo que te molesta,
 podemos deshacernos de este con el método de cadena {\tt strip}:
 \index{método strip}
 \index{strip!método}
@@ -7063,7 +7063,7 @@ problema resuelto y aplicas una solución existente.  \index{reducción a un
 
 
 \section{Bucles con índices}
-\index{bucles!con índices}
+\index{bucle!con índices}
 \index{índice!bucle con}
 
 Escribí las funciones de la sección anterior con bucles {\tt for}
@@ -7143,7 +7143,7 @@ def es_palindromo(palabra):
     return True
 \end{verbatim}
 
-O podríamos reducir a un problema previamente
+O bien podríamos reducir a un problema previamente
 resuelto y escribir:
 \index{reducción a un problema previamente resuelto}
 \index{plan de desarrollo!reducción}
@@ -7235,7 +7235,7 @@ de radio {\em Car Talk}
 \begin{quote}
 Dame una palabra con tres letras dobles consecutivas. Te daré un
 par de palabras que casi califican, pero no. Por ejemplo, la palabra
-committee, c-o-m-m-i-t-t-e-e. Sería genial excepto por la `i' que
+committee, c-o-m-m-i-t-t-e-e. Estaría excelente, si no fuera por la `i' que
 se cuela allí. O Mississippi: M-i-s-s-i-s-s-i-p-p-i. Si pudieras
 sacar esas `i' funcionaría. Pero hay una palabra que tiene tres
 pares de letras consecutivos y, por lo que sé, puede ser
@@ -7258,7 +7258,7 @@ Aquí hay otro Puzzler de {\em Car Talk}
 \index{palíndromo}
 
 \begin{quote}
-``Estaba conduciendo en la carretera el otro día y me di cuenta de
+``Estaba conduciendo en la carretera el otro día y me fijé en
 mi odómetro. Al igual que la mayoría de los odómetros, muestra seis dígitos,
 solo en millas enteras. Entonces, si mi automóvil tenía 300,000
 millas, por ejemplo, veía 3-0-0-0-0-0.
